1.8.10.dev0
 * #842: When a command hook exits with a soft failure, ping the log and finish states for any
   configured monitoring hooks.
 * #843: Add documentation link to Loki dashboard for borgmatic:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#loki-hook
 * Fix handling of the NO_COLOR environment variable to ignore an empty value.
 * Add documentation about backing up containerized databases by configuring borgmatic to exec into
   a container to run a dump command:
   https://torsion.org/borgmatic/docs/how-to/backup-your-databases/#containers

1.8.9
 * #311: Add custom dump/restore command options for MySQL and MariaDB.
 * #811: Add an "access_token" option to the ntfy monitoring hook for authenticating
   without username/password.
 * #827: When the "--json" flag is given, suppress console escape codes so as not to
   interfere with JSON output.
 * #829: Fix "--override" values containing deprecated section headers not actually overriding
   configuration options under deprecated section headers.
 * #835: Add support for the NO_COLOR environment variable. See the documentation for more
   information:
   https://torsion.org/borgmatic/docs/how-to/set-up-backups/#colored-output
 * #839: Add log sending for the Apprise logging hook, enabled by default. See the documentation for
   more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#apprise-hook
 * #839: Document a potentially breaking shell quoting edge case within error hooks:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#error-hooks
 * #840: When running the "rcreate" action and the repository already exists but with a different
   encryption mode than requested, error.
 * Switch from Drone to Gitea Actions for continuous integration.
 * Rename scripts/run-end-to-end-dev-tests to scripts/run-end-to-end-tests and use it in both dev
   and CI for better dev-CI parity.